Fix log wrap line issue

--- a/app/styles/pages/_container.scss
+++ b/app/styles/pages/_container.scss
@@ -16,6 +16,7 @@
   .log-msg {
     color: $success;
     line-height: initial;
+    white-space: nowrap;
     width: calc(100vw - 150px);
   }
 
